--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
         <input type="search" placeholder="Enter the Country Name...">
         <button class="search-btn" style="margin-left:30px ; border-radius: 20px;"">Search</button>
     </div>
-    <div class=" country-container">
+    <h1 style=" text-align:center;color:rgb(0, 52, 52); margin:50px">Searched</h1>
+            <div class=" country-container container-1">
 
-    </div>
-    <script src="js/script.js"></script>
+            </div>
+            <h1 style="text-align:center;color:rgb(0, 52, 52); margin:50px">All countries</h1>
+            <div class=" country-container container-2">
+
+            </div>
+            <script src="js/script.js"></script>
 </body>
 
 </html>
